# ShaderPerFormer

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.linux.txt
code/: pyproject.toml
code/toyDb/: .gitignore  README.md  ShaderDB.py  getShaders.py  manage.py  migrate.py  runTests.py
code/toyDb/cliFuncs/: augmentImageOnly.py  runImageOnly.py  runImageOnlyTrace.py
code/toyDb/databases/: AugmentationDb.py  ExperimentDBLegacy.py  ExperimentDb.py  ShaderDb.py
code/toyDb/experiments/: ImageOnly.py  ImageOnlyRunner.py
code/toyDb/notebooks/: DataDiffing.ipynb  DataExport-1660.ipynb  DataExport.ipynb  DataImport-1660.ipynb  DataImport.ipynb  TimeDistributionStudy.ipynb  runAug.ipynb  testDisassembler.py  testExecutor.py  testStability.py  traceCorrectnessCheck.py
code/toyDb/utils/: AugmentationManager.py  Directory.py  ExperimentDbHelpers.py  SubprocessManager.py
code/toyDb/utils/spv/: SpvContext.py  SpvInstStat.py  analyzeSpv.py
code/vkExecute/: CMakeLists.txt  KNOWN_PROBLEM.md  README.md  setup.py
code/vkExecute/include/: Common.hpp  ImageOnlyExecutor.hpp  Profiler.hpp  RenderWindow.hpp  ShaderProcessor.hpp  ShaderToy.hpp  SpvProcessor.hpp  vkDisplay.hpp  vkToy.hpp
code/vkExecute/include/spv/: AssignmentBuilder.hpp  BasicBlock.hpp  BasicBlockTestEmitter.hpp  FormatConverter.hpp  ModuleBuilder.hpp  SubVariableInfo.hpp  Tokenizer.hpp  Type.hpp  TypeBuilder.hpp
code/vkExecute/src/: GlslangResources.cpp  ImageOnlyExecutor.cpp  Main.cpp  PythonMain.cpp  ShaderProcessor.cpp  SpvProcessor.cpp  utils.hpp
code/vkExecute/src/spv/: AssignmentBuilder.cpp  BasicBlock.cpp  BasicBlockTestEmitter.cpp  FormatConverter.cpp  ModuleBuilder.cpp  Tokenizer.cpp  Type.cpp  TypeBuilder.cpp
code/vkExecute/src/vkToy/: RenderWindow.cpp  ShaderToy.cpp  vkDisplay.cpp
code/vkExecute/test/: ShadertoyCircle.inc.h  testDummy.cpp  testExecutor.cpp  testProcessor.cpp  testTokenizer.cpp
code/vkExecute/util/: getGitVersion.py
code/vkPredict/: README.md  compete.py  eval.py  exprRecord.md  fix-bug.ipynb  misc.py  pretrain.py  runVal.ipynb  test-bug.py  test-dataset.ipynb  test-ols.ipynb  test-tokenize-bug.py  test.ipynb  train.py  train_moco.py  validate.py
code/vkPredict/compete/: MLP.py  TracedLinearRegression.py  TracedPerInstLinearRegression.py
code/vkPredict/dataset/: DatasetBuilder.py  FragmentMaskedLMDataset.py  FragmentPerformanceAugWithTrace.py  FragmentPerformanceDataset.py  FragmentPerformanceSnapshotDataset.py  FragmentPerformanceTracedSnapshotDataset.py  FragmentPerformanceWithTraceByQueryDataset.py  FragmentPerformanceWithTraceDataset.py  MapDataset.py  shaderBlacklist.json
code/vkPredict/intermediates/: README.md
code/vkPredict/misc/: ComplexDatasetSnapshotter.py  Directory.py  HfBpeTokenizer.py  HfSpvTokenizer.py  HfTracedSpvTokenizer.py  Notebooks.py  TokenizerBuilder.py  calcNormalizationParams.py  dataCollator.py  getTokenizedLengthDistribution.py  metric.py  normalization.py  snapshotFragPerfDataset.py  snapshotFragPerfTraceDataset.py  snapshotFragTokenizedShaders.py  theoreticalPossibleGuess.py  tracePreprocessor.py  trainHfTokenizer.py
code/vkPredict/model/: ModelBuilder.py  PerformanceNet.py  configuration_perfformer.py  custom_roberta.py  dictionary.py  encoder_trainer.py  example_tasks.py  modeling_perfformer.py  test_model.py  test_model_encoder.py
code/vkPredict/model/embedding/: rotary.py  sine.py
code/vkPredict/model/mingpt/: model.py  trainer.py
code/vkPredict/notebooks/: CustomTester.ipynb  DatasetAnalysis.ipynb  DatasetAnalysisPlot.ipynb  DatasetAnalysisPlotOld.ipynb  DatasetCanonicalAnalysis-3060-optim.ipynb  DatasetCanonicalAnalysis-6600xt.ipynb  DatasetCanonicalAnalysis-uhd630.ipynb  DatasetCrossResolutionAnalysis.ipynb  DatasetCrossResourceAnalysis.ipynb  DatasetGeneration.ipynb  Heatmap.ipynb  HeatmapNew.ipynb  LinearRegression.ipynb  LinearRegression.py  MLPRegression.ipynb  ModelInference-6600xt.ipynb  ModelInference.ipynb  ModelInspection.ipynb  TracePosEmb.ipynb  TransformationAugmentation.ipynb  UniversalDatasetSnapshot.ipynb  UniversalDatasetSnapshotForAugmentation.ipynb
code/vkPredict/notebooks/production/: BaselineMethods.ipynb  BaselineMethodsValTimeFiltered.ipynb  BaselineMethodsValTimeFilteredAmend.ipynb  DatasetSnapshots.ipynb  DatasetSnapshotsVal.ipynb  DatasetSnapshotsValTimeFiltered.ipynb  DatasetSnapshotsValTimeFilteredAmend.ipynb  Pearson-Spearman.ipynb
code/vkPredict/task/: FragmentPerformanceRegressionTask.py  SpvMaskedLanguageModelingTask.py
code/vkPredict/test/: exampleImageOnlyShader.py  testDataset.py  testFastModel.py  testHuggingFace.py  testSpvTokenizer.py  testTrace.py
code/vkPredict/visualization/: predictor.py  visualization.py
code/vkToy/: CMakeLists.txt  pyproject.toml  run.py  setup.py  test.py  webDisplay.py  xmake.lua
code/vkToy/include/: ShaderToy.hpp  common.hpp  popl.hpp  util.hpp  vkDisplay.hpp  vkToy.hpp
code/vkToy/override/: glslang.lua  spirv-tools.lua
code/vkToy/src/traceToy/: main.cpp
code/vkToy/src/vkToy/: PythonMain.cpp  ShaderToy.cpp  glslang_resources.cpp  main.cpp
dataset/: .gitignore  README.md
